@startuml
skinparam linetype ortho
skinparam shadowing false
skinparam class {
    BackgroundColor White
    BorderColor #263238
    ArrowColor #263238
}

package "Construction Service" #FFE0B2 {
    package "Adapter" {
        class CostEstimateController {
            + requireSignificances(request: AssignTheSignificanceRequest): ResponseEntity<?>
        }
    }

    package "Application" {
        class CostEstimateUseCase {
            - estSrv: CostEstimateService
            - empSrv: EmployeeService
            - messageProducer: MessageProducer
            + assignStaffForSignCostEstimate(request: AssignTheSignificanceRequest): void
        }

        interface CostEstimateService {
            + isExisting(id: String): boolean
        }

        class MessageProducer {
            + send(routingKey: String, event: Object): void
        }

        class AssignTheSignificanceRequest <<record>> {
            + estId: String
            + surveyStaff: String
            + plHead: String
            + companyLeadership: String
        }

        class RequireSignificanceEvent <<record>> {
            + estId: String
            + surveyStaff: String
            + plHead: String
            + companyLeadership: String
        }
    }

    package "Infrastructure" {
        interface EmployeeService <<FeignClient>> {
            + isEmployeeExisting(id: String): WrapperApiResponse
        }
    }
}

package "Notification Service" #C8E6C9 {
    package "Event Consumer" {
        abstract class GeneralEventConsumer<T> {
            # notificationService: NotificationService
            # messagingTemplate: SimpMessagingTemplate
            # producer: MessageProducer
            # handle(event: T, topics: List<String>, title: String, link: String): void
        }

        class RequireSignificanceConsumer {
            + handle(event: RequireSignificanceEvent): void
        }
    }

    package "Infrastructure" as NotifyInfra {
        class SimpMessagingTemplate <<WebSocket>>
        class NotificationMessageProducer {
            + send(routingKey: String, event: NotificationCreatedEvent): void
        }
    }
}

package "Auth Service" #BBDEFB {
    package "Application.Event" as AuthEvent {
        class NotificationConsumer {
            - userRepository: UserRepository
            - individualNotificationRepository: IndividualNotificationRepository
            + handle(message: NotificationCreatedEvent): void
        }
    }
    package "Domain.Model" as AuthDomain {
        class Users <<Entity>>
        class IndividualNotification <<Entity>>
    }
    package "Infrastructure.Persistence" as AuthInfra {
        interface UserRepository <<Repository>> {
            + findByRoleNameIn(roles: List): List<Users>
            + existsByUserId(id: String): Boolean
        }
        interface IndividualNotificationRepository <<Repository>> {
            + saveAll(entities: List): void
        }
    }
}

' Relationships - Construction
CostEstimateController o-- CostEstimateUseCase
CostEstimateController ..> AssignTheSignificanceRequest

CostEstimateUseCase o-- CostEstimateService
CostEstimateUseCase o-- EmployeeService
CostEstimateUseCase o-- MessageProducer
CostEstimateUseCase ..> AssignTheSignificanceRequest
CostEstimateUseCase ..> RequireSignificanceEvent

' Relationships - Notification
RequireSignificanceConsumer --|> GeneralEventConsumer
GeneralEventConsumer o-- SimpMessagingTemplate
GeneralEventConsumer o-- NotificationMessageProducer

' Relationships - Auth
NotificationConsumer o-- UserRepository
NotificationConsumer o-- IndividualNotificationRepository
NotificationConsumer ..> Users
NotificationConsumer ..> IndividualNotification

' Event Flow
MessageProducer ..> RequireSignificanceConsumer : "RabbitMQ [RequireSignificanceEvent]"
GeneralEventConsumer ..> SimpMessagingTemplate : "Broadcast via WebSocket"
GeneralEventConsumer ..> NotificationMessageProducer : "Notify back to Auth"
NotificationMessageProducer ..> NotificationConsumer : "RabbitMQ [NotificationCreatedEvent]"

@enduml
